# matplotlib-backend-wezterm

./: README.md  __init__.py  pyproject.toml
matplot-backend-wezterm/: __init__.py
matplotlib-backend-wezterm/: __init__.py
