[project]
name = "matplotlib-backend-wezterm"
version = "2.1.2"
description = "Show matplotlib plots directly in your wezterm terminal"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Framework :: Matplotlib",
    "Topic :: Terminals",
]
dependencies = [ "matplotlib" ]

[project.urls]
"Homepage" = "https://github.com/yelircaasi/matplotlib-backend-wezterm"
"Bug Tracker" = "https://github.com/yelircaasi/matplotlib-backend-wezterm/issues"

[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [ "." ]

